kubernates_learning/deploy_with_configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-configmap
  labels:
    app: my-app-with-configmap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-with-configmap
  template:
    metadata:
      labels:
        app: my-app-with-configmap
    spec:
      containers:
      - name: my-container
        image: nginx:latest
        ports:
        - containerPort: 80
