kubernates_learning/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    app: sample-app-web-application
spec:
    containers:
    - name: sample-container
      image: nginx:latest
      ports:
      - containerPort: 80
