kubernates_learning/project_mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql
  namespace: todo-app
  labels:
    app: todo-application
    component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-application
      component: database
  template:
    metadata:
      labels:
        app: todo-application
        component: database
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage # much match vloumes.name
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
