kubernates_learning/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: app1-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1-label
  template:
    metadata:
      labels:
        app: app1-label
    spec:
      containers:
      - name: app1-container
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    app: app1-label
spec:
  selector:
    app: app1-label
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
