kubernates_learning/app2.yml
apiVersion: apps/v1     
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2-label    
  template:
    metadata:
      labels:
        app: app2-label  
    spec:
      containers:
      - name: app2-container
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app2-service    
  labels:
    app: app2-label
spec:
  selector:
    app: app2-label     
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
