kubernates_learning/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  labels:
    app: sample-app
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
