kubernates_learning/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-loadbalancer-service
  labels:
    app: sample-app
spec:
  type: LoadBalancer
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
