kubernates_learning/project_frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: todo-app
  labels:
    app: todo-application
    component: frontend
spec:
  type: LoadBalancer
  selector:
    app: todo-application
    component: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
