kubernates_learning/project_mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: todo-app
  labels:
    app: todo-application
    component: database
spec:
  type: ClusterIP
  selector:
    app: todo-application
    component: database
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
